ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

extern void GetAdvancedHistoryMessageListReverse(char* operationID, char* getMessageOptions);
extern void FindMessageList(char* operationID, char* findMessageOptions);
extern void InsertGroupMessageToLocalStorage(char* operationID, char* message, char* groupID, char* sendID);
extern void InsertSingleMessageToLocalStorage(char* operationID, char* message, char* recvID, char* sendID);
extern void SearchConversation(char* operationID, char* searchParam);
extern void SetMessageLocalEx(char* operationID, char* conversationID, char* clientMsgID, char* localEx);
extern char* GetAtAllTag(char* operationID);
extern char* CreateAdvancedTextMessage(char* operationID, char* text, char* messageEntityList);
extern char* CreateAdvancedQuoteMessage(char* operationID, char* text, char* message, char* messageEntityList);
extern char* CreateImageMessage(char* operationID, char* imagePath);
extern char* CreateSoundMessage(char* operationID, char* soundPath, int64_t duration);
extern char* CreateSoundMessageByURL(char* operationID, char* soundBaseInfo);
extern char* CreateVideoMessage(char* operationID, char* videoPath, char* videoType, int64_t duration, char* snapshotPath);
extern char* CreateVideoMessageByURL(char* operationID, char* videoBaseInfo);
extern char* CreateFileMessage(char* operationID, char* filePath, char* fileName);
extern char* CreateMergerMessage(char* operationID, char* messageList, char* title, char* summaryList);
extern char* CreateFaceMessage(char* operationID, int index, char* data);
extern void MarkMessagesAsReadByMsgID(char* operationID, char* conversationID, char* clientMsgIDs);