lib/openim_ffi_bindings_generated.dart


  late final _GetAdvancedHistoryMessageListReversePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetAdvancedHistoryMessageListReverse');
  late final _GetAdvancedHistoryMessageListReverse =
      _GetAdvancedHistoryMessageListReversePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void FindMessageList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> findMessageOptions,
  ) {
    return _FindMessageList(operationID, findMessageOptions);
  }

  late final _FindMessageListPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('FindMessageList');
  late final _FindMessageList =
      _FindMessageListPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void InsertGroupMessageToLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> sendID,
  ) {
    return _InsertGroupMessageToLocalStorage(
      operationID,
      message,
      groupID,
      sendID,
    );
  }

  late final _InsertGroupMessageToLocalStoragePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('InsertGroupMessageToLocalStorage');
  late final _InsertGroupMessageToLocalStorage =
      _InsertGroupMessageToLocalStoragePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void InsertSingleMessageToLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> sendID,
  ) {
    return _InsertSingleMessageToLocalStorage(
      operationID,
      message,
      recvID,
      sendID,
    );
  }

  late final _InsertSingleMessageToLocalStoragePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('InsertSingleMessageToLocalStorage');
  late final _InsertSingleMessageToLocalStorage =
      _InsertSingleMessageToLocalStoragePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void SearchConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchConversation(operationID, searchParam);
  }

  late final _SearchConversationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SearchConversation');
  late final _SearchConversation =
      _SearchConversationPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void SetMessageLocalEx(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
    ffi.Pointer<ffi.Char> localEx,
  ) {
    return _SetMessageLocalEx(
      operationID,
      conversationID,
      clientMsgID,
      localEx,
    );
  }

  late final _SetMessageLocalExPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('SetMessageLocalEx');
  late final _SetMessageLocalEx =
      _SetMessageLocalExPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> GetAtAllTag(ffi.Pointer<ffi.Char> operationID) {
    return _GetAtAllTag(operationID);
  }

  late final _GetAtAllTagPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>
  >('GetAtAllTag');
  late final _GetAtAllTag =
      _GetAtAllTagPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  ffi.Pointer<ffi.Char> CreateAdvancedTextMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> messageEntityList,
  ) {
    return _CreateAdvancedTextMessage(operationID, text, messageEntityList);
  }

  late final _CreateAdvancedTextMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateAdvancedTextMessage');
  late final _CreateAdvancedTextMessage =
      _CreateAdvancedTextMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateAdvancedQuoteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> messageEntityList,
  ) {
    return _CreateAdvancedQuoteMessage(
      operationID,
      text,
      message,
      messageEntityList,
    );
  }

  late final _CreateAdvancedQuoteMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateAdvancedQuoteMessage');
  late final _CreateAdvancedQuoteMessage =
      _CreateAdvancedQuoteMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateImageMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> imagePath,
  ) {
    return _CreateImageMessage(operationID, imagePath);
  }

  late final _CreateImageMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateImageMessage');
  late final _CreateImageMessage =
      _CreateImageMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateSoundMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundPath,
    int duration,
  ) {
    return _CreateSoundMessage(operationID, soundPath, duration);
  }

  late final _CreateSoundMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int64,
      )
    >
  >('CreateSoundMessage');
  late final _CreateSoundMessage =
      _CreateSoundMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  ffi.Pointer<ffi.Char> CreateSoundMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundBaseInfo,
  ) {
    return _CreateSoundMessageByURL(operationID, soundBaseInfo);
  }

  late final _CreateSoundMessageByURLPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateSoundMessageByURL');
  late final _CreateSoundMessageByURL =
      _CreateSoundMessageByURLPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateVideoMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoPath,
    ffi.Pointer<ffi.Char> videoType,
    int duration,
    ffi.Pointer<ffi.Char> snapshotPath,
  ) {
    return _CreateVideoMessage(
      operationID,
      videoPath,
      videoType,
      duration,
      snapshotPath,
    );
  }

  late final _CreateVideoMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int64,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateVideoMessage');
  late final _CreateVideoMessage =
      _CreateVideoMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateVideoMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoBaseInfo,
  ) {
    return _CreateVideoMessageByURL(operationID, videoBaseInfo);
  }

  late final _CreateVideoMessageByURLPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateVideoMessageByURL');
  late final _CreateVideoMessageByURL =
      _CreateVideoMessageByURLPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateFileMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> filePath,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _CreateFileMessage(operationID, filePath, fileName);
  }

  late final _CreateFileMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateFileMessage');
  late final _CreateFileMessage =
      _CreateFileMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateMergerMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> messageList,
    ffi.Pointer<ffi.Char> title,
    ffi.Pointer<ffi.Char> summaryList,
  ) {
    return _CreateMergerMessage(operationID, messageList, title, summaryList);
  }

  late final _CreateMergerMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateMergerMessage');
  late final _CreateMergerMessage =
      _CreateMergerMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateFaceMessage(
    ffi.Pointer<ffi.Char> operationID,
    int index,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _CreateFaceMessage(operationID, index, data);
  }

  late final _CreateFaceMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateFaceMessage');
  late final _CreateFaceMessage =
      _CreateFaceMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void MarkMessagesAsReadByMsgID(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgIDs,
  ) {
    return _MarkMessagesAsReadByMsgID(
      operationID,
      conversationID,
      clientMsgIDs,
    );
  }
